--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/main.js",
+    "build": "webpack --config client/webpack.config.js --mode development",
+    "watch": "webpack --config client/webpack.config.js --mode development --watch",
+    "heroku-postbuild": "webpack --config client/webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,7 +19,12 @@
   "dependencies": {
     "bufferutil": "^4.0.1",
     "express": "^4.17.1",
+    "phaser": "^3.24.1",
     "utf-8-validate": "^5.0.2",
     "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
