--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bufferutil": "^4.0.1",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "phaser": "^3.24.1",
     "utf-8-validate": "^5.0.2",
