--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/main.js",
+    "start": "node --use_strict server/main.js",
     "build": "webpack --config client/webpack.config.js --mode development",
     "watch": "webpack --config client/webpack.config.js --mode development --watch",
     "heroku-postbuild": "webpack --config client/webpack.config.js --mode production",
